<resources>
    <string name="app_name">HealthyWealthy</string>
    <string name="title_activity_presentation._home">presentation.HomeActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">From the Square world,\nHello, %1$s!</string>
    <string name="txt_please_select_age">Please select age</string>
    <string name="txtNext">Next</string>
    <string name="submit">Submit</string>
    <string name="txtEnterYourName">Enter Your Name</string>
    <string name="txtArrow">txtArrow</string>
    <string name="errorEnterValidString">Please enter valid name or age!</string>
    <string name="txtHealthCheck">Quick Health Check</string>
    <string name="txtResetUser">Reset User</string>
    <string name="txtProfile">Profile</string>
    <string name="txtUser">"Username - "</string>
    <string name="txtYes">Yes</string>
    <string name="txtNo">No</string>
    <string name="errorOption">Please select one option!</string>
    <string name="age">Age - </string>
    <string name="txt_home">Home</string>
    <string name="txt_save_results">Save Results</string>
    <string name="error_user_not_exists">User not exists!</string>
</resources>