<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.QuestionOneActivity"
    android:padding="5dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_boxedEdges="all">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="3">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/wear_checkups" />

            <TextView
                android:id="@+id/tvQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rbYes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtYes" />

                <RadioButton
                    android:id="@+id/rbNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtNo" />
            </RadioGroup>
            <ImageButton
                android:id="@+id/ivBtnNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_gravity="center"
                android:src="@drawable/icon_arrow"
                android:contentDescription="@string/txtArrow" />
        </LinearLayout>
    </ScrollView>

</androidx.wear.widget.BoxInsetLayout>